objects/Employees__x.object
<CustomObject>
    <description>Employees</description>
    <externalDataSource>Odata_Sample</externalDataSource>
    <externalName>Employees</externalName>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address</description>
        <externalDeveloperName>Address</externalDeveloperName>
        <label>Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BirthDate__c</fullName>
        <description>BirthDate</description>
        <externalDeveloperName>BirthDate</externalDeveloperName>
        <label>BirthDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <description>EmployeeID</description>
        <externalDeveloperName>EmployeeID</externalDeveloperName>
        <label>EmployeeID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>Extension</description>
        <externalDeveloperName>Extension</externalDeveloperName>
        <label>Extension</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>FirstName</description>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>FirstName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HireDate__c</fullName>
        <description>HireDate</description>
        <externalDeveloperName>HireDate</externalDeveloperName>
        <label>HireDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <description>HomePhone</description>
        <externalDeveloperName>HomePhone</externalDeveloperName>
        <label>HomePhone</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>LastName</description>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>LastName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes</description>
        <externalDeveloperName>Notes</externalDeveloperName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PhotoPath__c</fullName>
        <description>PhotoPath</description>
        <externalDeveloperName>PhotoPath</externalDeveloperName>
        <label>PhotoPath</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <description>Photo</description>
        <externalDeveloperName>Photo</externalDeveloperName>
        <label>Photo</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>PostalCode</description>
        <externalDeveloperName>PostalCode</externalDeveloperName>
        <label>PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region</description>
        <externalDeveloperName>Region</externalDeveloperName>
        <label>Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportsTo__c</fullName>
        <description>ReportsTo</description>
        <externalDeveloperName>ReportsTo</externalDeveloperName>
        <label>ReportsTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TitleOfCourtesy__c</fullName>
        <description>TitleOfCourtesy</description>
        <externalDeveloperName>TitleOfCourtesy</externalDeveloperName>
        <label>TitleOfCourtesy</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title</description>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Employees</label>
    <pluralLabel>Employees</pluralLabel>
</CustomObject>